@@ -32,7 +32,6 @@ import javax.servlet.http.HttpServletRequest;
 import org.fenixedu.academic.FenixEduAcademicConfiguration;
 import org.fenixedu.academic.domain.Installation;
 import org.fenixedu.academic.domain.Lesson;
-import org.fenixedu.academic.domain.SchoolClass;
 import org.fenixedu.academic.domain.Shift;
 import org.fenixedu.academic.domain.organizationalStructure.UnitNamePart;
 import org.fenixedu.academic.service.StudentWarningsDefaultCheckers;
@@ -60,7 +59,6 @@ public class FenixInitializer implements ServletContextListener {
     @Atomic(mode = TxMode.READ)
     public void contextInitialized(ServletContextEvent event) {
 
-        migrateSchoolClassPtSlots();
         migrateShiftPtSlots();
         migrateLessonPtSlots();
 
@@ -73,29 +71,6 @@ public class FenixInitializer implements ServletContextListener {
         registerHealthchecks();
         registerDefaultStudentWarningCheckers();
 
-    }
-
-    @Atomic
-    private void migrateSchoolClassPtSlots() {
-        final Set<SchoolClass> schoolClassses = Bennu.getInstance().getSchoolClasssSet();
-        logger.info("START SchoolClass migration");
-        logger.info(schoolClassses.size() + " SchoolClass (total)");
-
-        final AtomicInteger nameSlotChangesCounter = new AtomicInteger();
-        final AtomicInteger curricularYearSlotChangesCounter = new AtomicInteger();
-
-        schoolClassses.forEach(sc -> {
-            if (sc.migrateNomeToName()) {
-                nameSlotChangesCounter.incrementAndGet();
-            }
-            if (sc.migrateAnoCurricularToCurricularYear()) {
-                curricularYearSlotChangesCounter.incrementAndGet();
-            }
-        });
-
-        logger.info(nameSlotChangesCounter.get() + " Names slots updated");
-        logger.info(curricularYearSlotChangesCounter.get() + " CurricularYear slots updated");
-        logger.info("END SchoolClass migration");
     }
 
     @Atomic
