@@ -66,8 +66,6 @@
 	</p>
 
    	<bean:define id="degree" type="org.fenixedu.academic.domain.Degree" name="schoolClass" property="executionDegree.degreeCurricularPlan.degree"/>
-   	<bean:define id="curricularYear" type="java.lang.Integer" name="schoolClass" property="anoCurricular"/>
-   	<%= degree.constructSchoolClassPrefix(curricularYear) %>
    	<html:text bundle="HTMLALT_RESOURCES" altKey="text.className" property="className"/>
    	
    	<html:submit bundle="HTMLALT_RESOURCES" altKey="submit.submit" styleClass="btn btn-primary btn-xs">
